--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ layout: none
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-4">
-                            <h1>ELIXIR-UK Fellowship</h1>
-                            <p>Aiming to embed <strong>Research Data Management (RDM)</strong> know-how into UK universities and institutes, ELIXIR-UK Fellows create training materials to deliver them locally</p>
-                            <p>All resources are open and available to the broader research community in an effort to build a community of practice around RDM in the <strong>life sciences</strong></p>
-                            <a class="home" href="training_materials">
-                                <button type="button" class="home-button">Discover training materials</button>
+                            <h1>ELIXIR Data Steward Handbook</h1>
+                            <p>Welcome to the Data Steward Handbook, an ELIXIR Research Data Management (RDM) Community resource that offers practical guidance to data stewards on relevant topics in their daily job, encouraging the use of existing resources and best practices to improve local data management.
+                            </p>
+                                <a class="home" href="training_materials">
+                                <button type="button" class="home-button">Discover more</button>
                             </a>
                         </div>
                         <div class="col-lg-8">
