--- a/index.html
+++ b/index.html
@@ -13,6 +13,60 @@ layout: none
     
     <div class="landingpage">
 
+<!-- - landing banner -->
+        <section id="home" class="banner-area">
+            <div class="banner-content-wrapper">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-lg-4">
+                            <h1>ELIXIR Data Steward Handbook</h1>
+                            <p>Welcome to the Data Steward Handbook, an ELIXIR Research Data Management (RDM) Community resource that offers practical guidance to data stewards on relevant topics in their daily job, encouraging the use of existing resources and best practices to improve local data management.
+                            </p>
+                                <a class="home" href="about">
+                                <button type="button" class="home-button">Discover more</button>
+                            </a>
+                        </div>
+                        <div class="col-lg-8">
+                            <div class="banner-image">
+                                <div class="image">
+                                    <img src="assets/img/home-banner.svg">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+<!--- counters -->
+<!--            <div class="banner-counter">-->
+<!--                <div class="container">-->
+<!--                    <div class="counter-wrapper">-->
+<!--                        <div class="row justify-content-center">-->
+<!--                            <div class="col-lg-3 col-sm-6 ">-->
+<!--                                <div class="single-counter">-->
+<!--                                    <span class="count-content"><strong class="count">24</strong><span>/</span> Fellows</span>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="col-lg-3 col-sm-6">-->
+<!--                                <div class="single-counter">-->
+<!--                                    <span class="count-content"><strong class="count">19</strong><span>/</span> UK research-performing organisations</span>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="col-lg-3 col-sm-6">-->
+<!--                                <div class="single-counter">-->
+<!--                                    <span class="count-content"><strong class="count">44</strong><span>/</span> Short training videos</span>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="col-lg-3 col-sm-6">-->
+<!--                                <div class="single-counter">-->
+<!--                                    <span class="count-content"><strong class="count">2</strong><span>/</span> Course materials</span>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+        </section>
+
 
 <!--====== Features Start ======-->
 
