--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ layout: none
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <div class="section-title text-center">
-                    <h2 class="title no-anchor">Our training materials</h2>
+                    <h2 class="title no-anchor">Find out more</h2>
                 </div>
             </div>
         </div>
@@ -83,35 +83,37 @@ layout: none
             <div class="row">
                 <div class="col-lg-4">
                     <div class="single-features features-1">
-                        <a href="rdmbites">
+                        <a href="about">
+                            <!--
                             <img src="assets/img/icons/rdmbites-icon.svg" class="h-icon-6 mx-auto" alt="RDMbites icon">
+                            -->
+                            <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
                         </a>
                         <div class="features-content">
-                            <h4 class="features-title"><a href="rdmbites">RDMbites</a></h4>
-                            <p>Bites of content in the form of videos to train in basic and specialised research data management aspects</p>
+                            <h4 class="features-title"><a href="about">About</a></h4>
+                            <p>Read about what the Data Steward Handbook offers, who is it for, and how it can benefit you</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                         <div class="single-features features-1">
-                            <a href="course-materials">
+                            <a href="case_studies">
                                 <img src="assets/img/icons/course-materials-icon.svg" class="h-icon-6 mx-auto" alt="Course materials icon">
                             </a>
                             <div class="features-content">
-                                <h4 class="features-title"><a href="course_materials">Course materials</a></h4>
-                                <p>Open materials to train the life sciences workfroce with short courses or workshops on all things data management
-                                </p>
+                                <h4 class="features-title"><a href="case_studies">Case Studies</a></h4>
+                                <p>Real-world examples of how other data stewards run data management activities with tips and ideas.</p>
                             </div>
                         </div>
                 </div>
                 <div class="col-lg-4">
                         <div class="single-features features-1">
-                            <a href="recommended-resources">
+                            <a href="guidelines">
                                 <img src="assets/img/icons/course-materials-icon.svg" class="h-icon-6 mx-auto" alt="Recommended resource icon">
                             </a>
                             <div class="features-content">
-                                <h4 class="features-title"><a href="recommended_resources">Recommended resources</a></h4>
-                                <p>A curated list of FAIR training resources on research data management</p>
+                                <h4 class="features-title"><a href="guidelines">Guidelines</a></h4>
+                                <p>A practical guidance to data stewards on relevant topics in their daily job</p>
                             </div>
                         </div>
                 </div>
