--- a/index.html
+++ b/index.html
@@ -83,36 +83,36 @@ layout: none
             <div class="row">
                 <div class="col-lg-4">
                     <div class="single-features features-1">
-                        <a href="about">
+                        <a href="rdmbites">
                             <!--
                             <img src="assets/img/icons/rdmbites-icon.svg" class="h-icon-6 mx-auto" alt="RDMbites icon">
                             -->
                             <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
                         </a>
                         <div class="features-content">
-                            <h4 class="features-title"><a href="about">About</a></h4>
+                            <h4 class="features-title"><a href="rdmbites">About</a></h4>
                             <p>Read about what the Data Steward Handbook offers, who is it for, and how it can benefit you</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                         <div class="single-features features-1">
-                            <a href="case_studies">
+                            <a href="course-materials">
                                 <img src="assets/img/icons/course-materials-icon.svg" class="h-icon-6 mx-auto" alt="Course materials icon">
                             </a>
                             <div class="features-content">
-                                <h4 class="features-title"><a href="case_studies">Case Studies</a></h4>
+                                <h4 class="features-title"><a href="course-materials">Case Studies</a></h4>
                                 <p>Real-world examples of how other data stewards run data management activities with tips and ideas.</p>
                             </div>
                         </div>
                 </div>
                 <div class="col-lg-4">
                         <div class="single-features features-1">
-                            <a href="guidelines">
+                            <a href="recommended-resources">
                                 <img src="assets/img/icons/course-materials-icon.svg" class="h-icon-6 mx-auto" alt="Recommended resource icon">
                             </a>
                             <div class="features-content">
-                                <h4 class="features-title"><a href="guidelines">Guidelines</a></h4>
+                                <h4 class="features-title"><a href="recommended-resources">Guidelines</a></h4>
                                 <p>A practical guidance to data stewards on relevant topics in their daily job</p>
                             </div>
                         </div>
