--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: none
                     <div class="row align-items-center">
                         <div class="col-lg-4">
                             <h1>ELIXIR Data Steward Handbook</h1>
-                            <p>Welcome to the Data Steward Handbook, an ELIXIR Research Data Management (RDM) Community resource that offers practical guidance to data stewards on relevant topics in their daily job, encouraging the use of existing resources and best practices to improve local data management.
+                            <p>Practical guidance to data stewards in their daily job
                             </p>
                                 <a class="home" href="about">
                                 <button type="button" class="home-button">Discover more</button>
