--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@ layout: none
             <div class="row">
                 <div class="col-lg-4">
                     <div class="single-features features-1">
-                        <a href="rdmbites">
+                        <a href="about">
                             <img src="assets/img/icons/rdmbites-icon.svg" class="h-icon-6 mx-auto" alt="RDMbites icon">
                         </a>
                         <div class="features-content">
-                            <h4 class="features-title"><a href="rdmbites">About</a></h4>
+                            <h4 class="features-title"><a href="about">About</a></h4>
                             <p>Read about what the Data Steward Handbook offers, who is it for, and how it can benefit you</p>
                         </div>
                     </div>
