--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: none
 <!-- - landing banner -->
         <section id="home" class="banner-area">
             <div class="banner-content-wrapper">
-                <div class="container">
+                <div class="container g-lg-5">
                     <div class="row align-items-center">
                         <div class="col-lg-4">
                             <h1>ELIXIR Data Steward Handbook</h1>
@@ -38,7 +38,7 @@ layout: none
             </div>
 <!--- counters -->
 <!--            <div class="banner-counter">-->
-<!--                <div class="container">-->
+<!--                <div class="container g-lg-5">-->
 <!--                    <div class="counter-wrapper">-->
 <!--                        <div class="row justify-content-center">-->
 <!--                            <div class="col-lg-3 col-sm-6 ">-->
@@ -71,7 +71,7 @@ layout: none
 <!--====== Features Start ======-->
 
 <section id="features" class="features-area">
-    <div class="container">
+    <div class="container g-lg-5">
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <div class="section-title text-center">
@@ -123,7 +123,7 @@ layout: none
 <!--  Browser functionality
       </section>
         <section id="search-section" class="bg-light py-5">
-            <div class="container">
+            <div class="container g-lg-5">
                 <div class="row">
                     <h2 class="no-anchor text-center mb-3">What can we help you find?</h2>
                     <div class="position-relative">
@@ -143,7 +143,7 @@ layout: none
 
 <!--default content boxes
         <section class="bg-light pb-5">
-            <div class="container">
+            <div class="container g-lg-5">
                 {%- assign sidebar = site.data.sidebars[page.sidebar] %}
                 <div class="row row-cols-1 row-cols-sm-2">
                     {%- for folder in sidebar.subitems %}
@@ -167,7 +167,7 @@ layout: none
 <!-- news and events -->
 <!-- 
         <section class="py-5 bg-light">
-            <div class="container">
+            <div class="container g-lg-5">
                 <div class="row">
                     <div class="col-lg-6">
                     {% include news.html caption=true title=true limit=3 %}
